packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-14/fixed.js
function containsAssignment(node) {
  if (node.type === "AssignmentExpression") {
    return true;
  } else {
    /* ... */
  }
  return false;
}

function isReturnAssignException(node) {
  if (node.type === "ReturnStatement") {
    return node.argument && containsAssignment(node.argument);
  }
  return false;
}

const retStmt = { type: 'ReturnStatement' };
isReturnAssignException(retStmt);
